Fixed z-index for beacon

--- a/css/beacon.css
+++ b/css/beacon.css
@@ -7,3 +7,7 @@
     bottom: 86px !important;
     right: 20px !important;
 }
+
+#beacon-container iframe {
+    z-index: 1000000 !important;
+}
